--- a/build.gradle
+++ b/build.gradle
@@ -2,7 +2,10 @@
 
 buildscript {
     ext.kotlin_version = '1.3.61'
+    ext.rx_kotlin_version = '2.4.0'
+    ext.rx_android_version = '2.1.1'
     ext.koin_version = '2.1.5'
+    ext.room_version = '2.2.3'
     repositories {
         google()
         jcenter()
